[package]
name = "s3-transfer-manager"
version = "0.1.0"
edition = "2021"
authors = ["daiyy <daiyiyang@hotmail.com>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
description = "S3 Transfer Manager based on AWS S3 SDK"
repository = "https://github.com/daiyy/s3-transfer-manager"
documentation = "https://docs.rs/s3-transfer-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
bytes = "1.5.0"
futures = "0.3.30"
aws-sdk-s3 = "1.11.0"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1.1.1", features = ["byte-stream-poll-next", "http-body-0-4-x"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
futures-core = "0.3.30"
indicatif = "0.17.7"
